fix out of container div

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ body {
 }
 
 .container {
-  width: min(100%, 700px);
+  width: 100%;
   height: 100%;
 }
 
@@ -80,7 +80,8 @@ body {
 }
 
 #recipeSearchBox {
-  width: 100%;
+  width: min(100%, 700px);
+  margin: auto;
 }
 
 .searchInput {
